--- a/main/resources/com/scene/edit-tariff.fxml
+++ b/main/resources/com/scene/edit-tariff.fxml
@@ -56,7 +56,7 @@
                   <Font size="16.0" />
                </font>
             </TextField>
-            <Button fx:id="editTariffButton" layoutX="1017.0" layoutY="369.0" mnemonicParsing="false" onAction="#editTariff" prefHeight="0.0" prefWidth="182.0" style="-fx-background-color: #F39c63; -fx-background-radius: 5;" text="Edit">
+            <Button fx:id="editTariffButton" layoutX="1017.0" layoutY="369.0" mnemonicParsing="false" onAction="#editTariff" prefHeight="0.0" prefWidth="182.0" style="-fx-background-color: #F39c63; -fx-background-radius: 5;" text="Save">
                <font>
                   <Font name="Tw Cen MT Italic" size="21.0" />
                </font>
