--- a/main/resources/com/scene/add-tariff.fxml
+++ b/main/resources/com/scene/add-tariff.fxml
@@ -60,7 +60,7 @@
                   <Font size="16.0" />
                </font>
             </TextField>
-            <Button fx:id="addTariffInBDButton" layoutX="1017.0" layoutY="347.0" mnemonicParsing="false" onAction="#addTariff" prefHeight="0.0" prefWidth="182.0" style="-fx-background-color: #F39c63; -fx-background-radius: 5;" text="Add">
+            <Button fx:id="addTariffInBDButton" layoutX="1017.0" layoutY="347.0" mnemonicParsing="false" onAction="#addTariff" prefHeight="0.0" prefWidth="182.0" style="-fx-background-color: #F39c63; -fx-background-radius: 5;" text="Add tariff">
                <font>
                   <Font name="Tw Cen MT Italic" size="21.0" />
                </font>
